[tool.poetry]
name = "rl_games"
version = "2.0.0"
description = ""
readme = "README.md"
authors = [
    "Denys Makoviichuk <trrrrr97@gmail.com>",
    "Viktor Makoviichuk <victor.makoviychuk@gmail.com>"
]

[tool.poetry.dependencies]
python = ">=3.11"
torch = ">=2.0.0"
gymnasium = ">=0.29.0"
tensorboard = "^2.8.0"
tensorboardX = "^2.5"
PyYAML = "^6.0"
psutil = "^5.9.0"
setproctitle = "^1.2.2"
opencv-python = "^4.5.5"
wandb = ">=0.19.0"

ale-py = {version = "^0.8", optional = true}
AutoROM = {version = "^0.4.2", optional = true, extras = ["accept-rom-license"]}
brax = {version = "^0.0.13", optional = true}
jax = {version = "^0.3.13", optional = true}
mujoco = {version = ">=3.0.0", optional = true}
# Note: pufferlib 3.x pins numpy<2.0 and gymnasium<=0.29.1.
# To avoid downgrades, install with: pip install pufferlib --no-deps
pufferlib = {version = ">=1.0.0", optional = true}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.extras]
atari = ["ale-py", "AutoROM"]
brax = ["brax", "jax"]
mujoco = ["mujoco"]
pufferlib = ["pufferlib"]
