[project]
name = "rl_games"
version = "2.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Denys Makoviichuk", email = "trrrrr97@gmail.com"},
    {name = "Viktor Makoviichuk", email = "victor.makoviychuk@gmail.com"},
]
dependencies = [
    "torch>=2.0.0",
    "gymnasium>=0.29.0",
    "tensorboard>=2.8.0",
    "tensorboardX>=2.5",
    "PyYAML>=6.0",
    "psutil>=5.9.0",
    "setproctitle>=1.2.2",
    "opencv-python>=4.5.5",
    "wandb>=0.19.0",
]

[project.optional-dependencies]
atari = ["ale-py>=0.8", "AutoROM[accept-rom-license]>=0.4.2"]
brax = ["brax>=0.0.13", "jax>=0.3.13"]
mujoco = ["mujoco>=3.0.0", "imageio"]
# Note: pufferlib 3.x pins numpy<2.0 and gymnasium<=0.29.1.
# To avoid downgrades, install with: pip install pufferlib --no-deps
pufferlib = ["pufferlib>=1.0.0"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
