[project]
name = "rl_games"
version = "2.0.0"
description = ""
readme = "README.md"
requires-python = ">=3.11"
authors = [
    {name = "Denys Makoviichuk", email = "trrrrr97@gmail.com"},
    {name = "Viktor Makoviichuk", email = "victor.makoviychuk@gmail.com"},
]
dependencies = [
    "torch>=2.7.0",  # floor matches Isaac Lab / Isaac Sim 5.1 (torch 2.7 pin); dev lock pins 2.12
    "gymnasium>=1.0.0",
    "tensorboard>=2.8.0",
    "tensorboardX>=2.5",
    "PyYAML>=6.0",
    "psutil>=5.9.0",
    "setproctitle>=1.2.2",
    "opencv-python>=4.5.5",
    "wandb>=0.19.0",
]

[project.optional-dependencies]
atari = ["ale-py>=0.8", "AutoROM[accept-rom-license]>=0.4.2"]
brax = ["brax>=0.0.13", "jax>=0.3.13"]
mujoco = ["mujoco>=3.0.0", "imageio"]
# envpool 1.2.5 is the first release verified against numpy 2.x (declares
# numpy>=1.19 with no upper pin); releases <=1.1.x predate numpy 2.0.
envpool = ["envpool>=1.2.5"]
# pufferlib releases up to 3.0.0 pin numpy<2.0 and gymnasium<=0.29.1, which
# conflicts with this project's floors, so it cannot be a resolvable extra yet.
# pufferlib 4.0 drops those pins (core deps: torch>=2.9, unpinned numpy) --
# restore the extra as pufferlib>=4.0 once it ships on PyPI.
# Until then: pip install pufferlib --no-deps

[dependency-groups]
dev = ["pytest>=8"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
